tests/ui/unit-struct.stderr
error: input must be a struct with fields
 --> $DIR/unit-struct.rs:1:1
  |
1 | #[readonly::make]
  | ^^^^^^^^^^^^^^^^^
