tests/ui/unit-struct.rs
#[readonly::make]
struct Unit;

fn main() {}
